.gsd/exec/72a71799-d448-45e6-a82b-b930e11a12c8.stdout
DATA VERIFICATION: FAILED
D:\TraSua\_verify_tmp.mts:2
import { PrismaClient } from './generated/prisma/client';
         ^
SyntaxError: The requested module './generated/prisma/client' does not provide an export named 'PrismaClient'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.14.1

